@@ -286,14 +286,16 @@ object Document_Model
 
   /* HTTP preview */
 
-  def open_preview(view: View)
+  private val plain_text_prefix = "plain_text="
+
+  def open_preview(view: View, plain_text: Boolean)
   {
     Document_Model.get(view.getBuffer) match {
       case Some(model) =>
         val name = model.node_name
         val url =
-          PIDE.plugin.http_server.url.toString + PIDE.plugin.http_root +
-            "/preview?" + Url.encode(name.node)
+          PIDE.plugin.http_server.url.toString + PIDE.plugin.http_root + "/preview?" +
+            (if (plain_text) plain_text_prefix else "") + Url.encode(name.node)
         PIDE.editor.hyperlink_url(url).follow(view)
       case _ =>
     }
@@ -307,12 +309,15 @@ object Document_Model
     val preview =
       HTTP.get(preview_root, arg =>
         for {
-          query <- Library.try_unprefix(preview_root + "?", arg.uri.toString)
-          model <- get(PIDE.resources.node_name(Url.decode(query)))
+          query <- Library.try_unprefix(preview_root + "?", arg.uri.toString).map(Url.decode(_))
+          name = Library.perhaps_unprefix(plain_text_prefix, query)
+          model <- get(PIDE.resources.node_name(name))
         }
         yield {
           val snapshot = model.await_stable_snapshot()
-          val preview = Present.preview(snapshot, fonts_url = HTML.fonts_dir(fonts_root))
+          val preview =
+            Present.preview(snapshot, fonts_url = HTML.fonts_dir(fonts_root),
+              plain_text = query.startsWith(plain_text_prefix))
           HTTP.Response.html(preview.content)
         })
 
